[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/HUD-Menu/MainMenu/Story/story.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD-Menu/MainMenu/BackgroundAnimation/yuh.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD-Menu/MainMenu/Versus/smashMenu.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD-Menu/MainMenu/Options/gamecube.png" type="Texture" id=4]
[ext_resource path="res://src/Hud-MenuElements/Menu.gd" type="Script" id=5]

[node name="Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlsSprite" type="Sprite" parent="."]
position = Vector2( 1010, 355.51 )
texture = ExtResource( 4 )

[node name="storySprite" type="Sprite" parent="."]
position = Vector2( 445, 488.957 )
texture = ExtResource( 1 )

[node name="versusSprite" type="Sprite" parent="."]
position = Vector2( 445, 223.79 )
texture = ExtResource( 3 )
